mbtiles/tests/snapshots/copy__convert@v1__meta__hash.snap
---
source: mbtiles/tests/copy.rs
expression: actual_value
---
- type: table
  tbl_name: metadata
  sql: "CREATE TABLE metadata (\n    name TEXT NOT NULL PRIMARY KEY,\n    value TEXT\n)"
  values:
    - "(  \"agg_tiles_hash\", \"9ED9178D7025276336C783C2B54D6258\"  )"
    - "(  \"hash_algorithm\", \"md5\"  )"
    - "(  \"md-edit\", \"value - v1\"  )"
    - "(  \"md-remove\", \"value - remove\"  )"
    - "(  \"md-same\", \"value - same\"  )"
- type: table
  tbl_name: tiles_with_hash
  sql: "CREATE TABLE tiles_with_hash (\n    zoom_level INTEGER NOT NULL,\n    tile_column INTEGER NOT NULL,\n    tile_row INTEGER NOT NULL,\n    tile_data BLOB,\n    tile_hash TEXT,\n    PRIMARY KEY (zoom_level, tile_column, tile_row)\n)"
  values: []
- type: index
  tbl_name: metadata
  sql: ~
  values: ~
- type: index
  tbl_name: tiles_with_hash
  sql: ~
  values: ~
- type: view
  tbl_name: tiles
  sql: "CREATE VIEW tiles AS\nSELECT\n    zoom_level,\n    tile_column,\n    tile_row,\n    tile_data\nFROM tiles_with_hash"
  values: ~
